# spartan-framework

./: .coveragerc  .dockerignore  .env.example  .flake8  .gcloudignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  hunk.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tox.ini
app/exceptions/: __init__.py  database.py  user.py
app/helpers/: context.py  database.py  ddb.py  environment.py  secret.py
app/helpers/logger/: __init__.py  both.py  cloud.py  cloudwatch.py  factory.py  file.py  stream.py
app/helpers/logs/: base.py  factory.py
app/helpers/logs/formatter/: file.py  standard.py  tcp.py
app/helpers/logs/logger/: console.py  file.py  tcp.py
app/helpers/tracer/: __init__.py  base.py  cloud.py  factory.py  local.py
app/middlewares/: logging.py
app/models/: user.py
app/models/db/: base.py  category.py  image.py  images_category_association.py  images_inventory_association.py  images_supplier_association.py  inventory.py  location.py  movement.py  profile.py  reservation.py  stock.py  supplier.py
app/models/ddb/: auth.py  ddb_base.py  error.py
app/repositories/: __init__.py  base.py
app/requests/: query.py  user.py
app/responses/: query.py  user.py
app/services/: app.py  logger.py  logging.py  queue.py  tracer.py  user.py
app/services/logging/: aws.py  both.py  cloud.py  factory.py  file.py  gcloud.py  gcp.py  stream.py
app/services/tracing/: aws.py  base.py  factory.py  gcloud.py  gcp.py  local.py
config/: app.py  database.py  logging.py
database/migrations/: env.py
database/migrations/versions/: be6c69c1a61a_create_users_table.py
database/seeders/: user_seeder.py
docs/: DEVELOPER_REFERENCE.md
handlers/: chat.py  company.py  hello.py  inference.py  main.py  order.py  predict.py
jobs/: extract.py  extract_mysql.py
public/: main.py
public/static/: welcome.html
routes/: health.py  inference.py  users.py
storage/: book.py
test/unit/: test_predict_handler.py
tests/: conftest.py  test_cloud_logger.py
tests/feature/: test_health_check_endpoint.py
tests/helpers/logger/: file.py
tests/integrate/: test_inference_handler.py
tests/unit/: conftest.py  test_app_config.py  test_app_service.py  test_aws_logger.py  test_base_logger.py  test_base_model.py  test_base_repository.py  test_both_logger.py  test_chat_handler.py  test_cloud_logger.py  test_cloud_tracer.py  test_company_handler.py  test_config.py  test_database_config.py  test_ddb_base.py  test_ddb_helper.py  test_ddb_moto.py  test_exceptions_database.py  test_exceptions_user.py  test_factory_tracer.py  test_file_logger.py  test_gcloud_improved.py  test_gcloud_logger.py  test_gcp_logger.py  test_handler_main.py  test_health_route.py  test_hello_handler.py  test_helpers_context.py  test_inference_handler.py  test_inference_route.py  test_local_tracer.py  test_logging.py  test_logging_middleware.py  test_logging_service.py  test_main.py  test_predict_handler.py  test_queue_service.py  test_sample.py  test_secret.py  test_stream_logger.py  (+8 more)
