[project]
name = "spartan-framework"
version = "0.1.8"
description = "An infrastructure framework for serverless development in AWS"
authors = [
    {name = "Sydel Palinlin", email = "sydel.palinlin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.8.0"
aws-xray-sdk = "2.14.0"
aws-lambda-powertools = "3.8.0"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
distro = "1.9.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
jiter = "0.9.0"
jmespath = "1.0.1"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
langchain-core = "0.3.45"
langchain-openai = "0.3.8"
langsmith = "0.3.15"
openai = "1.66.3"
orjson = "3.10.15"
packaging = "24.2"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
python-dotenv = "1.0.1"
PyYAML = "6.0.2"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
sniffio = "1.3.1"
tenacity = "9.0.0"
tiktoken = "0.9.0"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
urllib3 = "2.3.0"
zstandard = "0.23.0"

[tool.poetry.group.dev.dependencies]
autoflake = "2.3.1"
boto3 = "^1.28.66"
alembic = "^1.13.3"
pytest = "8.3.5"
pytest-cov = "6.0.0"
black = "25.1.0"
isort = "6.0.1"
flake8 = "7.1.2"
bandit = "1.8.3"
poetry-plugin-export = "^1.8.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "0.25.3"
faker = "30.8.2"
mocker = "^1.1.1"
moto = "5.1.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
